# xolotl

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  config.h.in
test/advection/: W110AdvectionHandlerTester.cpp  W211AdvectionHandlerTester.cpp  XGBAdvectionHandlerTester.cpp  ZGBAdvectionHandlerTester.cpp
test/core/: CMakeLists.txt
test/core/advection/: DummyAdvectionHandlerTester.cpp  W100AdvectionHandlerTester.cpp  W110AdvectionHandlerTester.cpp  W111AdvectionHandlerTester.cpp  W211AdvectionHandlerTester.cpp  XGBAdvectionHandlerTester.cpp  YGBAdvectionHandlerTester.cpp  ZGBAdvectionHandlerTester.cpp
test/core/diffusion/: Diffusion1DHandlerTester.cpp  Diffusion2DHandlerTester.cpp  Diffusion3DHandlerTester.cpp  DummyDiffusionHandlerTester.cpp
test/core/flux/: AlloyFitFluxHandlerTester.cpp  AlloyFluxHandlerTester.cpp  AlphaZrFitFluxHandlerTester.cpp  CustomFitFluxHandlerTester.cpp  FeFitFluxHandlerTester.cpp  FuelFitFluxHandlerTester.cpp  PulsedFitFluxHandlerTester.cpp  TRIDYNFitFluxHandlerTester.cpp  W100FitFluxHandlerTester.cpp  W110FitFluxHandlerTester.cpp  W111FitFluxHandlerTester.cpp  W211FitFluxHandlerTester.cpp
test/core/modified/: DummyNucleationHandlerTester.cpp  DummySoretDiffusionHandlerTester.cpp  DummyTrapMutationHandlerTester.cpp  HeterogeneousNucleationHandlerTester.cpp  Sigma3TrapMutationHandlerTester.cpp  SoretDiffusionHandlerTester.cpp  (+4 more)
test/diffusion/: CMakeLists.txt  Diffusion2DHandlerTester.cpp  Diffusion3DHandlerTester.cpp
test/flux/: FuelFitFluxHandlerTester.cpp  PulsedFitFluxHandlerTester.cpp  TRIDYNFitFluxHandlerTester.cpp  W100FitFluxHandlerTester.cpp  W110FitFluxHandlerTester.cpp  W111FitFluxHandlerTester.cpp
test/interface/: CMakeLists.txt  InterfaceTester.cpp
test/io/: CMakeLists.txt  HDF5UtilsTester.cpp  TokenizedLineReaderTester.cpp
test/modifiedreaction/: CMakeLists.txt  DummyNucleationHandlerTester.cpp  DummyTrapMutationHandlerTester.cpp  W100TrapMutationHandlerTester.cpp  W111TrapMutationHandlerTester.cpp
test/options/: CMakeLists.txt  ConfOptionsTester.cpp  JSONOptionsTester.cpp  OptionsTester.cpp
test/perf/: CMakeLists.txt  EventCounterTester.cpp  PerfHandlerTester.cpp
test/performance/: CMakeLists.txt  DummyEventCounterTester.cpp  DummyTimerTester.cpp  PAPITimerTester.cpp
test/reactants/: CMakeLists.txt
test/solver/: CMakeLists.txt  PetscSolverTester.cpp
test/system/: BenchmarkTester.cpp  CMakeLists.txt  SystemTest.h  SystemTestCase.cpp  SystemTestCase.h  SystemTester.cpp
test/temperature/: CMakeLists.txt  TemperatureProfileHandlerTester.cpp
test/testfiles/: tungsten_diminutive.h5
test/util/: CMakeLists.txt  StepSequenceTester.cpp  TimeStepperTester.cpp  TokenizedLineReaderTester.cpp  TokenizerTester.cpp  TupleUtilsTester.cpp
test/visualization/: CMakeLists.txt  CvsXYDPTester.cpp  DataProviderTester.cpp  DummyPlotTester.cpp  PlotTester.cpp
test/viz/: CMakeLists.txt  CvsXDPTester.cpp  CvsXYDPTester.cpp  DataProviderTester.cpp  DummyPlotTester.cpp  PlotTester.cpp
xconv/: CMakeLists.txt  main.cpp
xolotl/: .clang-tidy  .cproject  .project  CMakeLists.txt  DLinterface.cpp  README  XolotlConfig.h  XolotlDLinterface.h  config.h.in  interface.cpp  interface.h  main.cpp  version.h.in  xolotl.doxyfile  xthi.cpp  xthi.h
xolotl/cmake-modules/: FindEAVL.cmake  FindGPTL.cmake  FindHDF5.cmake  FindMESA.cmake  FindPAPI.cmake  FindPETSc.cmake  JUnit.cmake  LICENSE  README  SetupVTKm.cmake
xolotl/core/: CMakeLists.txt
xolotl/examples/: clusterLoading.cpp
xolotl/factory/: CMakeLists.txt
xolotl/gov.ornl.xolotl.preprocessor/: .classpath  .project  29V.out  CMakeLists.txt
xolotl/gov.ornl.xolotl.preprocessor.test/: .classpath  .project
xolotl/interface/: CMakeLists.txt
xolotl/io/: CMakeLists.txt  config.h.in
xolotl/options/: CMakeLists.txt
xolotl/perf/: CMakeLists.txt  config.h.in
xolotl/solver/: CMakeLists.txt
xolotl/src/: CMakeLists.txt
xolotl/tests/: CMakeLists.txt
xolotl/util/: CMakeLists.txt
xolotl/viz/: CMakeLists.txt
xolotl/xolotlCore/: CMakeLists.txt  Constants.h  DissociationReaction.cpp  DoInOrder.h  IIdentifiable.h  IReactant.h  Identifiable.h  MathUtils.h  NDArray.h  NDPoint.h  NetworkLoader.h  Point3D.h  Reactant.cpp  ReactantType.cpp  ReactantType.h  ReactionNetwork.cpp  Species.cpp
xolotl/xolotlFactory/: CMakeLists.txt
xolotl/xolotlModel/: .project  xolotlModel.emx  xolotlUMLtoCPP.tc
xolotl/xolotlPerf/: CMakeLists.txt  EventCounter.cpp  EventCounter.h  HandlerRegistryFactory.cpp  HandlerRegistryFactory.h  HardwareCounter.cpp  HardwareCounter.h  HardwareQuantities.h  IEventCounter.h  IHandlerRegistry.cpp  IHandlerRegistry.h  IHardwareCounter.h  ITimer.h  PerfObjStatistics.h  RuntimeError.h  Timer.cpp  Timer.h  XolotlConfigPerf.h.in  eventcounter.cpp  eventcounter.h  hardwarecounter.cpp  hardwarecounter.h  hardwarequantities.h  ihandlerregistry.cpp  ihandlerregistry.h  timer.cpp  timer.h  xolotlPerf.cpp  xolotlPerf.h
xolotl/xolotlSchemas/: .project  xolotlSchema.xsd
xolotl/xolotlSolver/: CMakeLists.txt  FitFluxHandler.cpp  FitFluxHandler.h  IFluxHandler.h  ISolver.h  ISolverHandler.h  ITemperatureHandler.h  Monitor.cpp  PETScSolver.cpp  PETScSolver.h  PetscSolver.cpp  PetscSolver.h  Solver.cpp  Solver.h  TemperatureHandler.cpp  TemperatureHandler.h  petscsolver.cpp  petscsolver.h
xolotl/xolotlViz/: CMakeLists.txt  IDataProvider.h  IPlot.h  IVizHandlerRegistry.h  LabelProvider.h  PlotType.h  PlottingStyle.h  Point.h  VizHandlerRegistryFactory.cpp  VizHandlerRegistryFactory.h  dataprovider.cpp  dataprovider.h  idataprovider.cpp  idataprovider.h  ilabelprovider.cpp  ilabelprovider.h  iplot.cpp  iplot.h  labelprovider.cpp  labelprovider.h  plot.cpp  plot.h  plottingstyle.h  point.cpp  point.h  qvstimedataprovider.cpp  qvstimedataprovider.h  qvsxdataprovider.cpp  qvsxdataprovider.h  qvsxydataprovider.cpp  qvsxydataprovider.h  qvsxytimedataprovider.cpp  qvsxytimedataprovider.h  qvsxzdataprovider.cpp  qvsxzdataprovider.h  qvsxztimedataprovider.cpp  qvsxztimedataprovider.h  qvsydataprovider.cpp  qvsydataprovider.h  qvsyzdataprovider.cpp  (+11 more)
(+1613 files in other folders)
