#Add the test subdirectories
add_subdirectory(io)
add_subdirectory(reactants)
add_subdirectory(diffusion)
add_subdirectory(advection)
add_subdirectory(solver)
add_subdirectory(performance)
add_subdirectory(commandline)
add_subdirectory(visualization)
add_subdirectory(temperature)
add_subdirectory(flux)
add_subdirectory(modifiedreaction)
add_subdirectory(system)
